# Study-Trail

./: .gitattributes  .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
scripts/: create-app-icon.py  generate-ico.py  tauri-preflight.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: App.tsx
src/app/components/: CalendarView.tsx  CelebrationOverlay.tsx  FileViewerModal.tsx  FolderUploadModal.tsx  InTabNotifications.tsx  LiquidBar.tsx  Sidebar.tsx  StudyTrailView.tsx  SubjectColorPickerModal.tsx  SubjectsView.tsx  TodayView.tsx  WeeklyPlanView.tsx
src/lib/: analytics.ts  constants.ts  desktop.ts  folderParser.ts  storage.ts
src/lib/__tests__/: analytics.test.ts  folderParser.test.ts
src/styles/: fonts.css  theme.css
src/types/: index.ts
