[package]
name = "study-trail"
version = "1.1.0"
description = "Study Trail Desktop Edition"
authors = ["Study Trail Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.2"
tauri-plugin-fs = "2.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
